--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,23 @@
 
 	<dependencies>
 
+	
+	
+
+
+	<dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-dbcp2</artifactId>
+        <version>2.0.1</version>
+    </dependency>
+		
+	
+   <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.31</version>
+    </dependency>
+		
 		
 		<dependency>
 			<groupId>org.hsqldb</groupId>
@@ -175,6 +192,39 @@
 			<version>${org.springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
+<dependency>
+    <groupId>org.glassfish.web</groupId>
+    <artifactId>jstl-impl</artifactId>
+    <version>1.2</version>
+    <exclusions>
+        <exclusion>
+            <artifactId>servlet-api</artifactId>
+            <groupId>javax.servlet</groupId>
+        </exclusion>
+        <exclusion>
+            <artifactId>jsp-api</artifactId>
+            <groupId>javax.servlet.jsp</groupId>
+        </exclusion>
+        <exclusion>
+            <artifactId>jstl-api</artifactId>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+        </exclusion>
+    </exclusions>
+</dependency>
 
 	</dependencies>
 
