--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,9 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
+
+
+
 <!-- location of log4j config file -->
 <!-- <context-param>
     <param-name>log4jConfigLocation</param-name>
@@ -49,13 +52,42 @@ applies log4j configuration
 		<url-pattern>*.html</url-pattern>
 		<url-pattern>*.htm</url-pattern>
 		<url-pattern>*.json</url-pattern>
-		
 		<url-pattern>*.xml</url-pattern>
 	</servlet-mapping>
 	
 	 <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+    
+<filter>
+<filter-name>springSecurityFilterChain</filter-name>
+<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+
+<filter-mapping>
+<filter-name>springSecurityFilterChain</filter-name>
+<url-pattern>/*</url-pattern>
+</filter-mapping> 
+    
+    
+    
+    
+    
+    <!-- Sample for FindAll Replationships -->
+   <!--  <filter>
+    <filter-name>oemInViewFilter</filter-name>
+    <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+    <init-param>
+    <param-name>entityManagerFactoryBeanName</param-name>
+    <param-value>entityManagerFactory</param-value>
+    </init-param>
+    </filter>
+    
+    <filter-mapping>
+    <filter-name>oemInViewFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    </filter-mapping> -->
 
 
 </web-app>
